feat: create header and hero

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,9 @@
     rgba(255, 255, 255, 0)
   );
   --header-height: 76px;
+  --margin-sm: 16px;
+  --margin-md: 26px;
+  --margin-lg: 60px;
 
 
   /* background: radial-gradient(circle at 100%, #333, #333 50%, #eee 75%, #333 75%); */
@@ -59,4 +62,5 @@
 body {
   background: var(--background);
   height: 100vh;
+  color: white
 }
