--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -17,7 +17,7 @@
     left: 0;
     height: calc(100vh - var(--header-height));
     width: 100%;
-    /* background: rebeccapurple; */
+    background: var(--background);
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
@@ -49,6 +49,4 @@
     width: 700px;
     height: 700px;
     background: var(--primary-glow);
-    /* backdrop-filter:blur(1000px);
-    clip-path: circle(40%); */
   }
