--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -17,7 +17,7 @@
     left: 0;
     height: calc(100vh - var(--header-height));
     width: 100%;
-    background: var(--background);
+    background: var(--primary-black);
     transform: translateX(100%);
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
