feat: enable nav links

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -27,6 +27,11 @@
     font-weight: 300;
 }
 
+.list-item a {
+    text-decoration: none;
+    color: white;
+}
+
 .list-item::before {
     content: '';
     position: absolute;
