feat: hero layout

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,3 +4,9 @@
   align-items: center;
   padding: 35px;
 }
+
+@media (min-width: 1024px) {
+  .main-content {
+    padding-inline: var(--padding-xl);
+  }
+}
