feat: song list layout

--- a/src/components/SongList/song-list.module.css
+++ b/src/components/SongList/song-list.module.css
@@ -4,6 +4,7 @@
     gap: var(--spacing-md);
     margin-top: var(--spacing-lg);
     position: relative;
+    width: 320px;
 }
 
 .gradient {
@@ -14,4 +15,11 @@
     z-index: -1;
     left: 25px;
     top: -50px;
+}
+
+@media (min-width: 768px) {
+    .songs {
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
 }
