--- a/src/components/AboutMe/about-me.module.css
+++ b/src/components/AboutMe/about-me.module.css
@@ -21,3 +21,23 @@
     border-radius: var(--border-radius-sm);
     margin-top: var(--spacing-lg)
 }
+
+@media (min-width: 1024px) {
+    .about-me {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: var(--padding-lg);
+        align-items: center;
+        margin-block: var(--margin-lg);
+    }
+
+    .text-wrapper {
+        flex: 1;
+        padding: var(--padding-md);
+    }
+
+    .image {
+        flex: 1;
+        margin-top: 0;
+    }
+}
