--- a/src/components/ContactMe/contact-me.module.css
+++ b/src/components/ContactMe/contact-me.module.css
@@ -1,5 +1,4 @@
 .contact-me {
-    height: 260px;
     width: 100%;
     background: linear-gradient(to right, #8907E9, #B332FA) !important;
     border-radius: var(--border-radius-md);
@@ -34,8 +33,8 @@
         margin-top: 0;
         height: 100%;
         display: flex;
-        flex-direction: column;
         justify-content: center;
+        gap: var(--spacing-md);
         overflow: hidden;
     }
 
