--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -25,6 +25,13 @@
   z-index: -1;
 }
 
+@media (min-width: 420px) {
+  .waves {
+    width: 1000px;
+    height: 800px;
+  }
+}
+
 @media (min-width: 640px) {
   .title {
       align-self: flex-start;
@@ -46,6 +53,11 @@
     width: 100%;
     max-width: 1100px;
   }
+
+  .waves {
+    width: 2000px;
+    height: 1200px;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -58,4 +70,19 @@
     line-height: 95px;
     margin-bottom: var(--margin-lg);
   }
+
+  .waves {
+    top: 430px;
+    width: 4000px;
+    height: 800px;
+  }
 }
+
+
+@media (min-width: 1100px) {
+  .waves {
+    display: none
+  }
+}
+
+
