--- a/src/components/SongList/song-list.module.css
+++ b/src/components/SongList/song-list.module.css
@@ -28,4 +28,12 @@
     .songs {
         margin-top: var(--spacing-xl)
     }
+
+    .gradient {
+        right: -600px;
+        width: 700px;
+        height: 900px;
+        top: -300px;
+        left: unset;
+    }
 }
