--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,94 +1,93 @@
 .header {
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 35px;
-    position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 35px;
+  position: relative;
 }
 
 .logo-wrapper {
-    width: 150px
+  width: 150px;
 }
 
 .navigation {
-    position: absolute;
-    top: var(--header-height);
-    left: 0;
-    height: calc(100vh - var(--header-height));
-    width: 100%;
-    background: var(--primary-black);
-    transform: translateX(100%);
-    transition: transform 0.3s ease-in-out;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 50px;
-    padding-top: 135px;
-    z-index: 20;
+  position: absolute;
+  top: var(--header-height);
+  left: 0;
+  height: calc(100dvh - var(--header-height));
+  width: 100%;
+  background: var(--primary-black);
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  padding-top: 135px;
+  z-index: 20;
 }
 
 .navigation-open {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .navigation-desktop {
-    display: none;
+  display: none;
 }
 
 .navlink {
-    text-decoration: none;
-    color: white;
-    z-index: 1;
+  text-decoration: none;
+  color: white;
+  z-index: 1;
 }
 
 .waves {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
 }
 
 .gradient {
-    position: absolute;
-    top: -450px;
-    left: -400px;
-    width: 700px;
-    height: 800px;
-    background: var(--primary-glow);
-    z-index: 21;
-  }
-
+  position: absolute;
+  top: -450px;
+  left: -400px;
+  width: 700px;
+  height: 800px;
+  background: var(--primary-glow);
+  z-index: 21;
+}
 
 @media (min-width: 768px) {
-    .navigation {
-        display: none;
-    }
+  .navigation {
+    display: none;
+  }
 
-    .navigation-desktop {
-        display: flex;
-        gap: var(--spacing-lg);
-        align-items: center;
-    }
+  .navigation-desktop {
+    display: flex;
+    gap: var(--spacing-lg);
+    align-items: center;
+  }
 
-    .burger-menu {
-        display: none;
-    }
+  .burger-menu {
+    display: none;
+  }
 }
-    
+
 @media (min-width: 1024px) {
-    .header {
-        padding-inline: var(--padding-xl);
-        padding-block: var(--padding-lg);
-    }
+  .header {
+    padding-inline: var(--padding-xl);
+    padding-block: var(--padding-lg);
+  }
 
-    .logo-wrapper {
-        width: 240px
-    }
+  .logo-wrapper {
+    width: 240px;
+  }
 
-    .gradient {
-        top: -600px;
-        left: -400px;
-        width: 1000px;
-        height: 1200px;
-    }
+  .gradient {
+    top: -600px;
+    left: -400px;
+    width: 1000px;
+    height: 1200px;
+  }
 }
