--- a/src/components/ThankYouMessage/thank-you-message.module.css
+++ b/src/components/ThankYouMessage/thank-you-message.module.css
@@ -1,23 +1,43 @@
 .thank-you {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-top: var(--spacing-md);
-    padding: var(--padding-md);
-    background: white;
-    border-radius: var(--border-radius-md);
-    height: 407px;
-    color: black
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-top: var(--spacing-md);
+  padding: var(--padding-md);
+  background: white;
+  border-radius: var(--border-radius-md);
+  height: 407px;
+  color: black;
 }
 
 .title {
-    font-size: 30px;
-    font-weight: 300;
-    margin-bottom: var(--spacing-md);
+  font-size: 30px;
+  font-weight: 300;
+  margin-bottom: var(--spacing-md);
 }
 
 .paragraph {
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 22px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+}
+
+.button {
+  all: unset;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 54px;
+  border: 2px solid var(--primary-black);
+  border-radius: var(--border-radius-lg);
+  padding-inline: var(--padding-md);
+  font-weight: 500;
+  margin-top: var(--spacing-md);
+}
+
+.button:hover {
+  cursor: pointer;
+  background: var(--primary-black);
+  color: white;
 }
